[gd_scene load_steps=5 format=3 uid="uid://cd8bandoml7hl"]

[ext_resource type="PackedScene" uid="uid://b285vl84brpq4" path="res://menu.tscn" id="1_6nel3"]
[ext_resource type="Script" path="res://main.gd" id="1_lt888"]
[ext_resource type="PackedScene" uid="uid://cnu62qte2aflp" path="res://splash.tscn" id="1_pbgtx"]
[ext_resource type="PackedScene" uid="uid://dkm8htnfe2j7g" path="res://game.tscn" id="4_npa4v"]

[node name="Main" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_lt888")

[node name="Game" parent="." instance=ExtResource("4_npa4v")]
layout_mode = 1

[node name="Menu" parent="." instance=ExtResource("1_6nel3")]
process_mode = 3
layout_mode = 1

[node name="Splash" parent="." instance=ExtResource("1_pbgtx")]
process_mode = 3
layout_mode = 1

[connection signal="menu_open_requested" from="Game" to="." method="_on_game_menu_open_requested"]
[connection signal="credits_roll_requested" from="Menu" to="." method="_on_menu_credits_roll_requested"]
